# rust_learning

./: readme.md
basics/: readme.md
basics/001-hello_world/: main.rs
basics/003-guessing_game/: Cargo.toml
basics/004-playing_with_let/src/: main.rs
fasterthanlime/001-halfanhour_to_learn_rust/: blocks.rs  patterns_destructure.rs  readme.md  structs.rs  tuples.rs
grpc-calculator/: Cargo.toml  build.rs  readme.md
grpc-calculator/proto/: calculator.proto
grpc-calculator/src/: client.rs  main.rs
grpc-calculator/src/service/: calculator_service.rs  mod.rs
guessing_game/: Cargo.toml
guessing_game/src/: main.rs
hello_cargo/: Cargo.toml  Makefile
linked-list/: readme.md
linked-list/src/: lib.rs
playing_with_let/: Cargo.toml
playing_with_let/src/: main.rs
rust-systems-programming/: readme.md
rust-systems-programming/first-program/: Cargo.toml  readme.md
rust-systems-programming/first-program/lib/: lib.rs
rust-systems-programming/first-program/src/: main.rs  second.rs
rust-systems-programming/test-example/: Cargo.toml  readme.md
rust-systems-programming/test-example/doc/: itest.html  itest.md
rust-systems-programming/test-example/lib/: lib.rs
rust-systems-programming/test-example/src/: main.rs  second.rs
rust-systems-programming/test-example/tests/: integration-test1.rs
