[package]
name = "grpc-calculator"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.12"
tokio = { version = "1", features = ["full"]   }
prost = "0.13.1"
tonic-reflection = "0.12"
tonic-health = "0.12.0"

[build-dependencies]
tonic-build = "0.11"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/client.rs"
