[package]
name = "first-program"
version = "0.1.0"
edition = "2021"

default-run = "new-first-program"

[[bin]]
name = "new-first-program"
path = "src/main.rs"

[[bin]]
name = "second-program"
path = "src/second.rs"

[lib]
name = "some_library"
path = "lib/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = ">= 0.4.22, < 0.4.23"
